# bank-agent-llm

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  alembic.ini  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  new_bank_parser.md
.github/workflows/: ci.yml
config/: config.example.yaml
docs/: adding-a-parser.md  architecture.md  roadmap.md
src/bank_agent_llm/: __init__.py  cli.py  config.py  main.py  pipeline.py
src/bank_agent_llm/chat/: __init__.py
src/bank_agent_llm/dashboard/: app.py
src/bank_agent_llm/enrichment/: __init__.py  enricher.py  ollama.py  rules.py  tags.py
src/bank_agent_llm/enrichment/data/: rules.yaml  tags.yaml
src/bank_agent_llm/ingestion/: __init__.py  dedup.py  file_scanner.py  gmail_client.py  imap_client.py
src/bank_agent_llm/parsers/: __init__.py  _utils.py  bancolombia.py  base.py  factory.py  falabella.py  scotiabank.py
src/bank_agent_llm/storage/: __init__.py  database.py  models.py  repository.py
src/bank_agent_llm/storage/migrations/: env.py
src/bank_agent_llm/storage/migrations/versions/: 001_initial_schema.py  002_add_enrichment_fields.py  006_reset_fragmented_merchants.py
tests/: test_config.py  test_pipeline_import.py
tests/enrichment/: test_enricher.py  test_rules.py  test_tags.py
tests/ingestion/: test_dedup.py  test_file_scanner.py
tests/parsers/: test_bancolombia.py  test_factory.py  test_falabella.py  test_scotiabank.py  test_utils.py
tests/storage/: test_repository.py  test_stats_repository.py
