[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bank-agent-llm"
version = "0.1.0"
description = "Local-first AI pipeline to fetch, parse, categorize, and query bank statements"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # PDF parsing
    "pdfplumber>=0.11",
    "PyPDF2>=3.0",
    # Database
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    # Config
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    # HTTP (for Ollama API)
    "httpx>=0.27",
    # Excel parsing
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
bank-agent = "bank_agent_llm.main:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["*/migrations/*"]

[tool.hatch.build.targets.wheel]
packages = ["src/bank_agent_llm"]
